# PION

./: .clang-format  .gitlab-ci.yml  CITATION.txt  CMakeLists.txt  LICENCE.txt  LICENSE  LICENSE.md  README.md  README.txt  install.sh  original_params_Wind2D_RSG_WR_n0128_l4.txt  param_testMPv10.txt  params_Wind2D_RSG_WR_n0128_l4.txt
analysis/2d-to-3d/: CMakeLists.txt  map-2d-to-3d.cpp
analysis/projection/: CMakeLists.txt  Makefile  README.txt  angle_projection.cpp  angle_projection.h  image_io.cpp  image_io.h  perp_projection.cpp  perp_projection.h  project2D.cpp  projection_constants.h  xray-table.txt  xray_emission.cpp  xray_emission.h
analysis/projection3D/: CMakeLists.txt  Makefile  example_usage.sh  main_projection.cpp  point_quantities.cpp  point_quantities.h  sim_projection.cpp  sim_projection.h  xray-table.txt
analysis/silo2ascii/: CMakeLists.txt  Makefile  compile_OSX.sh  silo2text.cc  silo2text.cpp
analysis/silo2fits/: CMakeLists.txt  Makefile  compile.sh  silo2fits.cpp
analysis/silocompare/: CMakeLists.txt  Makefile  Makefile.silocompare  add_mesh_connectivity.cc  silocompare.cc  silocompare.cpp
source/: CMakeLists.txt  Doxyfile  MCMD_control.cpp  MCMD_control.h  README.txt  constants.cpp  constants.cpp.orig  constants.h  constants.h.orig  global.cc  global.h  grid.h  gridMethods.cc  gridMethodsMPI.cc  log_Doxygen.txt  main.cc  main.cpp  mainMPI.cc  mainMPI.cpp  main_MPI.cpp  main_NG.cpp  main_NG_MPI.cpp  main_SMR.cpp  main_icgen.cpp  main_icgen_MPI.cpp  main_icgen_NG.cpp  main_icgen_NG_MPI.cpp  main_nested.cpp  main_wave.cpp  setup_fixed_grid.cpp  setup_fixed_grid.h  setup_fixed_grid_MPI.cpp  setup_fixed_grid_MPI.h  setup_nested_grid.cpp  sim_constants.h  sim_control.cpp  sim_control.h  sim_control_MPI.cpp  sim_control_MPI.h  sim_control_nested.cpp  (+5 more)
source/Riemann_solvers/: CMakeLists.txt  HLLD_MHD.cpp  HLLD_MHD.h  HLL_hydro.cpp  HLL_hydro.h  Riemann_FVS_hydro.cc  Riemann_FVS_hydro.cpp  Riemann_FVS_hydro.h  Roe_Hydro_ConservedVar_solver.cc  Roe_Hydro_ConservedVar_solver.cpp  Roe_Hydro_ConservedVar_solver.h  Roe_Hydro_PrimitiveVar_solver.cc  Roe_Hydro_PrimitiveVar_solver.cpp  Roe_Hydro_PrimitiveVar_solver.h  Roe_MHD_ConservedVar_solver.cc  Roe_MHD_ConservedVar_solver.cpp  Roe_MHD_ConservedVar_solver.h  findroot.cc  findroot.cpp  findroot.h  riemann.cc  riemann.cpp  riemann.h  riemannMHD.cc  riemannMHD.cpp  riemannMHD.h
source/SMR_grid/: dataio_fits_NG.cpp  dataio_fits_SMR.h  dataio_text_NG.cpp  dataio_text_SMR.cpp
source/boundaries/: CMakeLists.txt  MCMD_boundaries.cpp  MCMD_boundaries.h  NG_BC89flux.cpp  NG_BC89flux.h  NG_MPI_BC89flux.cpp  NG_MPI_BC89flux.h  NG_MPI_coarse_to_fine_boundaries.cpp  NG_MPI_coarse_to_fine_boundaries.h  NG_MPI_fine_to_coarse_boundaries.cpp  NG_MPI_fine_to_coarse_boundaries.h  NG_coarse_to_fine_boundaries.cpp  NG_coarse_to_fine_boundaries.h  NG_fine_to_coarse_boundaries.cpp  NG_fine_to_coarse_boundaries.h  NG_fine_to_coarse_boundaries_MPI.cpp  NG_fine_to_coarse_boundaries_MPI.h  RT_MPI_boundaries.cpp  RT_MPI_boundaries.h  SMR_coarse_to_fine_boundaries.cpp  SMR_coarse_to_fine_boundaries.h  SMR_fine_to_coarse_boundaries.cpp  SMR_fine_to_coarse_boundaries.h  assign_update_bcs.cpp  assign_update_bcs.h  assign_update_bcs_MPI.cpp  assign_update_bcs_MPI.h  assign_update_bcs_NG.cpp  assign_update_bcs_NG.h  assign_update_bcs_NG_MPI.cpp  assign_update_bcs_NG_MPI.h  assign_update_bcs_SMR.cpp  assign_update_bcs_SMR.h  axisymmetric_boundaries.cpp  axisymmetric_boundaries.h  boundaries.h  double_Mach_ref_boundaries.cpp  double_Mach_ref_boundaries.h  fixed_boundaries.cpp  fixed_boundaries.h  (+22 more)
source/comms/: CMakeLists.txt  comm_files.cc  comm_files.cpp  comm_files.h  comm_mpi.cc  comm_mpi.cpp  comm_mpi.h  comms.h
source/contrib/: CMakeLists.txt  HD_2D_ShockCloud.cpp  HD_3D_ShockCloud.cpp  read_BBurkhart_data.cpp
source/coord_sys/: CMakeLists.txt  VectorOps.cc  VectorOps.cpp  VectorOps.h  VectorOps_spherical.cc  VectorOps_spherical.cpp  VectorOps_spherical.h
source/dataIO/: CMakeLists.txt  dataio.cc  dataio.cpp  dataio.h  dataio_base.cpp  dataio_base.h  dataio_fits.cc  dataio_fits.cpp  dataio_fits.h  dataio_fits_MPI.cpp  dataio_fits_MPI.h  dataio_silo.cc  dataio_silo.cpp  dataio_silo.h  dataio_silo_MPI.cc  dataio_silo_MPI.cpp  dataio_silo_MPI.h  dataio_silo_NG.cpp  dataio_silo_NG.h  dataio_silo_SMR.cpp  dataio_silo_SMR.h  dataio_silo_nestedgrid.cpp  dataio_silo_nestedgrid.h  dataio_silo_utility.cpp  dataio_silo_utility.h  dataio_text.cpp  dataio_text.h  dataio_text_nestedgrid.cpp  dataio_utility.cc  dataio_utility.h  file_status.cpp  file_status.h  parameter_defs.cpp  parameter_defs.h  readparams.cc  readparams.cpp  readparams.h  utility_fits_class.cc  utility_fits_class.cpp
source/decomposition/: CMakeLists.txt  MCMD_control.cpp  MCMD_control.h
source/defines/: functionality_flags.h  testing_flags.h
source/equations/: CMakeLists.txt  eqns_base.cc  eqns_base.cpp  eqns_base.h  eqns_hydro_adi_Eint.h  eqns_hydro_adiabatic.cc  eqns_hydro_adiabatic.cpp  eqns_hydro_adiabatic.h  eqns_hydro_isothermal.cc  eqns_hydro_isothermal.cpp  eqns_hydro_isothermal.h  eqns_mhd_adiabatic.cc  eqns_mhd_adiabatic.cpp  eqns_mhd_adiabatic.h
source/flux_calc/: flux_base.cc  flux_base.cpp  flux_base.h  flux_hydro_adi_Eint.cc  flux_hydro_adi_Eint.h  flux_hydro_adiabatic.cc  flux_hydro_adiabatic.cpp  flux_hydro_adiabatic.h  flux_hydro_isothermal.cpp  flux_hydro_isothermal.h  flux_mhd_adiabatic.cc  flux_mhd_adiabatic.cpp  flux_mhd_adiabatic.h
source/future/: HHe_photoion.cpp  HHe_photoion.h  MPv10.cpp  MPv10.h  constants.h  eqns_hydro_isothermal.cpp  flux_hydro_isothermal.h  mpv8_TwoTempIso.cpp  mpv8_TwoTempIso.h  mpv9_HHe.cpp  mpv9_HHe.h  sim_params.h
source/grid/: CMakeLists.txt  cell_interface.cc  cell_interface.cpp  cell_interface.h  grid_base_class.h  setup_NG_MPI_grid.cpp  setup_NG_MPI_grid.h  setup_NG_grid.cpp  setup_NG_grid.h  setup_SMR_grid.cpp  setup_SMR_grid.h  setup_fixed_grid.cpp  setup_fixed_grid.h  setup_fixed_grid_MPI.cpp  setup_fixed_grid_MPI.h  setup_grid_NG_MPI.cpp  setup_grid_NG_MPI.h  setup_nested_grid.cpp  setup_nested_grid.h  (+17 more)
(+1523 files in other folders)
